<?xml version="1.0" encoding="utf-8"?>
<resources
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="MissingTranslation" >

    <string name="app_name">Example 6</string>
    <string name="login_pass">Login Pass</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_online_service">TrueConf Online</string>
    <string name="login">Login</string>
    <string name="call_to">Call to</string>
    <string name="action_call">Call</string>
    <string name="msg_empty_login_or_pass">Empty login or pass</string>
    <string name="msg_empty_peer_id">Must not be empty</string>
    <string name="state_no_network">No network</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="server_id">TrueConf Server Hostname/IP</string>
    <string name="add_contact">Add Contact</string>
    <string name="logout">Logout</string>
    <string name="connect_to_server">Connect to server</string>
    <string name="connect">Connect</string>
    <string name="chat_send_message_hint">Enter your message</string>
    <string name="desc">description</string>
    <string name="msg_invalid_server_port_value">Invalid server port value</string>
    <string name="msg_invalid_server_value">Invalid server value</string>
    <string name="enter_id">Enter id</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string-array
        name="ip_set">
        <!--<item>192.168.1.107</item>-->
        <!--<item>10.70.8.89</item>-->
        <!--<item>192.115.76.47</item>-->
        <!--<item>192.168.90.12</item>-->
        <!--<item>212.199.52.38</item>-->
    </string-array>
</resources>
