<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

        <ImageButton
            android:id="@id/chat_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/message_block"
            android:layout_alignBottom="@id/message_block"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/outline_send_48" />

        <LinearLayout
            android:id="@+id/message_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toStartOf="@+id/chat_action_button">

            <EditText
                android:id="@+id/et_chat_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:hint="@string/chat_send_message_hint"
                android:scrollbars="vertical"
                android:imeOptions="actionSend"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="1000"
                android:maxLines="3"
                android:textColor="@android:color/black"
                android:singleLine="false" />

            <EditText
                android:id="@+id/et_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:hint="@string/enter_id"
                android:scrollbars="vertical"
                android:maxLength="1000"
                android:textColor="@android:color/black"
                android:singleLine="true" />

        </LinearLayout>

</RelativeLayout>
